Fixed small issue where icon is rendering in the wrong size on the score-ring.

--- a/src/openssf-dashboard/shared/components/score-ring/score-ring.component.scss
+++ b/src/openssf-dashboard/shared/components/score-ring/score-ring.component.scss
@@ -52,8 +52,8 @@
     }
 
     osd-icon {
-      width: 70px;
-      height: 70px;
+      width: 40cqw;
+      height: 40cqw;
     }
   }
 }
